tests/neg/interop_classtags_arenot_manifests.check
-- Error: tests/neg/interop_classtags_arenot_manifests.scala:5:23 ------------------------------------------------------
5 |    println(manifest[T]) // error
  |                       ^
  |                       No Manifest available for T.
